# robodc-ros2

./: README.md
.docker/: Dockerfile.jetson
modubot_ws/src/modubot_joystick/: CMakeLists.txt  package.xml  setup.cfg  setup.py
modubot_ws/src/modubot_joystick/config/: .source.swp  teleop.yaml
modubot_ws/src/modubot_joystick/launch/: joystick_teleop.launch.py
modubot_ws/src/modubot_model_description/: package.xml  setup.cfg  setup.py
modubot_ws/src/modubot_model_description/config/: nav2_params.yaml
modubot_ws/src/modubot_model_description/launch/: display.launch.py  full.launch.py  gazebo.launch.py
modubot_ws/src/modubot_model_description/meshes/: base_link.stl  camera_1.stl  left_caster_1.stl  left_wheel_1.stl  lidar_1.stl  right_caster_1.stl  right_wheel_1.stl
modubot_ws/src/modubot_model_description/urdf/: materials.xacro  modubot_model.gazebo  modubot_model.trans  modubot_model.xacro
modubot_ws/src/modubot_odometry/: package.xml  setup.cfg  setup.py
modubot_ws/src/modubot_odometry/launch/: odom_only.launch.py
modubot_ws/src/modubot_odometry/modubot_odometry/: serial_odometry_node.py
modubot_ws/src/modubot_teleop/: package.xml  setup.cfg  setup.py
modubot_ws/src/modubot_teleop/modubot_teleop/: __init__.py  cmdvel_to_serial.py
modubot_ws/src/urdf_description/: package.xml  setup.py
modubot_ws/src/urdf_description/config/: nav2_params.back.yaml  nav2_params.yaml
modubot_ws/src/urdf_description/launch/: display.launch.py  full.launch.py  gazebo.launch.py
modubot_ws/src/urdf_description/maps/: PisoInferior.yaml
(+10 files in other folders)
