<?xml version="1.0"?>
<package format="3">
  <name>modubot_joystick</name>
  <version>0.1.0</version>
  <description>Joystick wrapper (launch+config) for ModuBot using joy and teleop_twist_joy.</description>
  <maintainer email="you@example.com">Levir</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
